syntax = "proto2";

package sf.solana.block_meta.v1;

message PbTransfer {
  required uint64 lamports = 1;
}

message PbTransferWithSeed {
  required uint64 lamports = 1;
  required string from_seed = 2;
  required string from_owner = 3;
}

message Arg {
  required string instruction_type = 1;
  optional PbTransfer transfer = 2;
  optional PbTransferWithSeed transferWithSeed = 3;
}

message InputAccounts {
  optional string funding_account = 1;
  optional string recipient_account = 2;
  optional string base_account = 3;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required string signer = 6;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required string outer_program = 11;
  required Arg args = 12;
  required InputAccounts input_accounts = 13;
}

message Output {
  repeated Meta data = 1;
}