syntax = "proto2";

package sf.solana.block_meta.v1;

message PbCreateAccount {
  required uint64 lamports = 1;
  required uint64 space = 2;
  required string owner = 3;
}

message PbCreateAccountWithSeed {
  required string base = 1;
  required string seed = 2;
  required uint64 lamports = 3;
  required uint64 space = 4;
  required string owner = 5;
}

message Arg {
  required string instruction_type = 1;
  optional PbCreateAccount createAccount = 2;
  optional PbCreateAccountWithSeed createAccountWithSeed = 3;
}

message InputAccounts {
  optional string funding_account = 1;
  optional string new_account = 2;
  optional string created_account = 3;
  optional string base_account = 4;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required string outer_program = 11;
  required Arg args = 12;
  required InputAccounts input_accounts = 13;
}

message Output {
  repeated Meta data = 1;
}